2006-10-04  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/ui_utils.c, src/main.c, src/document.c, src/callbacks.c:
   Renamed ui_build_show_hide() in ui_update_build_menu().
 * src/filetypes.c, src/ui_utils.c:
   Fixed crash when using "Make object" on new files(closes #1570818).


2006-10-03  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/callbacks.c: Save configuration(i.e. list of open files) as late
                    as possible and save the filetype build commands
                    first shortly before quitting.
 * doc/geany.docbook, doc/geany.1.in, src/main.c, src/document.c:
   Reordered command line options alphabetically.
   Added new command line option --line to set the initial line for the
   first opened file.
 * data/filetypes.sh, src/highlighting.c: Added keyword "until".


2006-10-02  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/templates.c:
   Added a blank line indent for templates D, HTML, PHP.
 * src/symbols.c, src/symbols.h, src/highlighting.c,
   src/makefile.win32, src/Makefile.am, po/POTFILES.in:
   Move global tags code to symbols.c.
   Added symbols_global_tags_loaded(), symbols_get_global_keywords().
 * src/callbacks.c, src/sci_cb.c, src/sciwrappers.c, src/sciwrappers.h,
   src/document.c:
   Change sci_get_line to return a NULL terminated string.
   Fix memory leak and possible invalid read in sci_cb_auto_latex().


2006-10-01  Enrico Tröger  <enrico.troeger@uvena.de>

 * configure.in: Use datarootdir for defining paths to fix autoconf
                 2.60 problems(thanks to Christoph Berg for reporting).


2006-10-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/callbacks.c, src/filetypes.c, src/filetypes.h, TODO:
   Save the build includes and arguments on quitting.


2006-09-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, src/highlighting.h:
   Changed StyleSet struct to use Style array, which can use less
   memory. Added separate struct for the common style set. Also