@@ -1,3 +1,8 @@
+2006-10-06  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * tagmanager/python.c: Improved Python parser to support nested classes.
+
+
 2006-10-04  Enrico Tröger  <enrico.troeger@uvena.de>
 
  * src/ui_utils.c, src/main.c, src/document.c, src/callbacks.c:
